# QBIT

./: .dockerignore  .env.example  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-CHECKLIST.md  DOCKER-CHANGES.md  DOCKER-README.md  README.md  docker-compose.yaml  dockerfile  x
.sqlx/: query-79d7150fb500e0db62855fe61fc125c91fdc14addf57938facd2296582c18bfd.json
Ideas or roadmaps/: README.md
docs/: ACCOUNT_COMMAND.md  BALANCE_COMMAND.md  Database_idea.md  Final_file_tree  README.md  Readme_test.md  SOLVED_COMMAND.md  function_files.md
docs/commands/: README.md  account.md  balance.md  solved.md
docs/deployment/: COOLIFY-QUICKSTART.md  DEPLOYMENT-CHECKLIST.md  DOCKER-README.md  README.docker.md
docs/development/: ARCHITECTURE.md  Database_idea.md  function_files.md
src/: main.rs
src/api/: codeforces.rs  mod.rs
src/commands/: mod.rs  ping.rs
src/commands/codeforces/: account.rs  mod.rs  problem.rs  setchannel.rs  sethour.rs  solved.rs
src/commands/economy/: balance.rs  mod.rs
src/events/: guild.rs  message.rs  mod.rs
src/tasks/: daily.rs  mod.rs
