[package]
name = "bot-olim-p-code"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["framework", "gateway", "client", "standard_framework"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"          # Para leer variables de entorno (.env)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] } # para PostgreSQL
anyhow = "1.0.100"
arc = "0.0.1"
chrono = "0.4.42"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
